src-ken&y/objects/Supplier__c.object
<CustomObject>
    <customHelpPage>HelpSuppliers</customHelpPage>
    <description>Supplier object</description>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookupt to Account</description>
        <label>Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aliases__c</fullName>
        <label>Aliases</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Name__c</fullName>
        <description>The alternate name is used when the supplier is operating under [doing business as] a different name.</description>
        <label>Alternate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Take_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acts as an indicator flag to always take the discount earned on payment terms regardless of the discount due date</description>
        <label>Always Take Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Bank account number to receive payment</description>
        <label>Bank Account Number</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>If(ISBLANK(Supplier_City__c), Address__r.BillingCity, Supplier_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consigned_Aging_in_Days__c</fullName>
        <description>Consigned Aging in Days</description>
        <inlineHelpText>The number of days the inventory may be kept in consigned status.</inlineHelpText>
        <label>Consigned Aging in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consigned_Contact_s_Email__c</fullName>
        <description>Consigned Contact&apos;s Email</description>
        <inlineHelpText>For consigned material.</inlineHelpText>
        <label>Consigned Contact&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Consigned_Report_Interval_in_Days__c</fullName>
        <description>Consigned Report Interval in Days</description>
        <inlineHelpText>Number of days between consigned material reports.</inlineHelpText>
        <label>Consigned Report Interval in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>If(ISBLANK(Supplier_Country__c), Address__r.BillingCountry, Supplier_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Invoice_Automatically_on_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check mark indicates that a supplier invoice is automatically created  when a receipt is recorded from the supplier.</inlineHelpText>
        <label>Self Billed Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_RTV_Credit_Memo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create RTV Credit Memo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_RTV_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create RTV PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Default Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Supplier Transaction Currency</relationshipLabel>
        <relationshipName>Supplier_Transaction_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>D&amp;B Number to identify this company</description>
        <inlineHelpText>A unique nine-digit ID for the customer&apos;s physical location.</inlineHelpText>
        <label>DUNS Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Receiving_Tolerance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>default delivery tolerance which gets copied as the default receiving tolerance on the Purchase order line</description>
        <inlineHelpText>The default delivery tolerance is copied to the PO line as the default receiving tolerance.</inlineHelpText>
        <label>Default Receiving Tolerance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOB Term</label>
        <referenceTo>FOB_Terms__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you cannot issue a payment to this supplier</description>
        <inlineHelpText>Indicates that you cannot issue a payment to this supplier.</inlineHelpText>
        <label>Hold Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Purchasing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you cannot create a new Purchase order for this supplier, does not affect existing POs or any downstream processes.</description>
        <inlineHelpText>Indicates that you cannot create a new purchase order for this supplier.</inlineHelpText>
        <label>Hold Purchasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Matching__c</fullName>
        <label>Invoice Matching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Three Way</fullName>
                </value>
                <value>
                    <fullName>Two Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Consigned_Report_Date__c</fullName>
        <description>Last Consigned Report Date</description>
        <label>Last Consigned Report Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Minimum_Shelf_Life_In_Days__c</fullName>
        <description>The minimum shelf life required for an item to be received against a PO for this supplier. If given a value, this will take precedence over the minimum shelf life on the class.</description>
        <inlineHelpText>The minimum shelf life required for an item to be received against a PO for this supplier. If given a value, this will take precedence over the minimum shelf life on the class.</inlineHelpText>
        <label>Minimum Shelf Life In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Control__c</fullName>
        <description>1099 Payer Name Control field - Required field on 1099s</description>
        <label>DEPRECATED</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Method__c</fullName>
        <description>Method supplier would like to receive purchase orders</description>
        <label>Order Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>cXML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Hold_Payment__c</fullName>
        <description>Is the parent supplier on payment hold</description>
        <formula>Parent_Supplier__r.Hold_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Hold Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent supplier</description>
        <label>Parent Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Suppliers (Parent Supplier)</relationshipLabel>
        <relationshipName>ChildSuppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Per_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if payments should be created separately for each invoice against this supplier.</description>
        <inlineHelpText>Indicates that separate payments are to be created for each invoice.</inlineHelpText>
        <label>Pay Per Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method_G__c</fullName>
        <defaultValue>&apos;Check&apos;</defaultValue>
        <description>Defines how the supplier would like to be paid</description>
        <label>Remittance Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Defines how the supplier would like to be paid</description>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Portal__c</fullName>
        <label>Payment Portal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Correspondence__c</fullName>
        <description>Preferred correspondence method</description>
        <label>Preferred Correspondence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Used while data load is running to set record type</description>
        <label>Record Type Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Remit-To supplier that this purchasing supplier belongs to.</description>
        <label>Remit-To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Remit-To</value>
            </filterItems>
            <infoMessage>Select the Remit-To supplier</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Suppliers (Purchasing)</relationshipLabel>
        <relationshipName>PurchasingSuppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>If(ISBLANK(Supplier_State__c), Address__r.BillingState, Supplier_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Supplier Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>Captures additional street address information for the supplier</description>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>Allows to capture additional street address information for the supplier</description>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>IF(ISBLANK(Supplier_Street__c), Address__r.BillingStreet, Supplier_Street__c  &amp; IF(ISBLANK(Street_1__c), &quot;&quot;, &quot; &quot; &amp; Street_1__c) &amp; 
        IF(ISBLANK(Street_2__c), &quot;&quot;, &quot; &quot; &amp; Street_2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_City__c</fullName>
        <description>Supplier City</description>
        <inlineHelpText>Supplier City</inlineHelpText>
        <label>Supplier City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Country__c</fullName>
        <description>Supplier Country</description>
        <inlineHelpText>Supplier Country</inlineHelpText>
        <label>Supplier Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <externalId>true</externalId>
        <label>Supplier ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_State__c</fullName>
        <description>Supplier State</description>
        <inlineHelpText>Supplier State</inlineHelpText>
        <label>Supplier State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Street__c</fullName>
        <description>Supplier Street</description>
        <inlineHelpText>Supplier Street</inlineHelpText>
        <label>Supplier Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Unique__c</fullName>
        <description>Supplier plus company unique check</description>
        <label>Supplier Unique</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supplier_Zip_Code__c</fullName>
        <description>Supplier Zip Code</description>
        <inlineHelpText>Supplier Zip Code</inlineHelpText>
        <label>Supplier Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Tax identification number for the supplier</description>
        <inlineHelpText>Tax identification number for the supplier</inlineHelpText>
        <label>Tax Identification</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Hold_Payment__c</fullName>
        <description>Is the Top parent supplier on payment hold</description>
        <formula>Top_Parent_Supplier__r.Hold_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The top parent supplier of the supplier on payment hold. For example, Supplier C is on payment hold. C&apos;s parent is Supplier B, and B&apos;s parent is Supplier A. In this case, the top parent on payment hold is Supplier A.</inlineHelpText>
        <label>Top Parent Hold Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ultimate parent record for a set of related Suppliers</description>
        <label>Top Parent Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Suppliers (Top Parent Supplier)</relationshipLabel>
        <relationshipName>TopSupplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of supplier record.</description>
        <inlineHelpText>Type of supplier record. Options include: Purchasing and Remit-To.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Remit-To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W9_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether a W9 form has been submitted for this supplier</description>
        <inlineHelpText>Indicates whether a W9 form has been submitted for this supplier. For 1099 payers.</inlineHelpText>
        <label>W9 Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X1099_Box_G__c</fullName>
        <label>1099 Box</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X1099_Box</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Box__c</fullName>
        <description>List of boxes on the 1099 that a supplier&apos;s payments will get summarized on</description>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Rents</fullName>
                </value>
                <value>
                    <fullName>2 Royalties</fullName>
                </value>
                <value>
                    <fullName>3 Other Income</fullName>
                </value>
                <value>
                    <fullName>4 Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 Medical</fullName>
                </value>
                <value>
                    <fullName>7 Nonemployee Compensation</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>8 Substitute Payments</fullName>
                </value>
                <value>
                    <fullName>9 Payer Direct Sales</fullName>
                </value>
                <value>
                    <fullName>10 Crop Insurance</fullName>
                </value>
                <value>
                    <fullName>13 Excess golden parachute</fullName>
                </value>
                <value>
                    <fullName>14 Gross proceeds to Attorney</fullName>
                </value>
                <value>
                    <fullName>15a Section 409A Deferrals</fullName>
                </value>
                <value>
                    <fullName>15b Section 409A Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this supplier is a 1099 supplier.</description>
        <label>1099 Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>If(ISBLANK(Supplier_Zip_Code__c), Address__r.BillingPostalCode, Supplier_Zip_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Supplier_List</fullName>
        <columns>NAME</columns>
        <columns>Supplier_ID__c</columns>
        <columns>Payment_Method_G__c</columns>
        <columns>Order_Method__c</columns>
        <columns>Website__c</columns>
        <columns>DUNS_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Approved Supplier List</label>
    </listViews>
    <listViews>
        <fullName>Suppliers_on_Payment_Hold</fullName>
        <columns>NAME</columns>
        <columns>Hold_Payment__c</columns>
        <columns>Hold_Purchasing__c</columns>
        <columns>Parent_Supplier__c</columns>
        <columns>Parent_Hold_Payment__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>Status__c</columns>
        <columns>Top_Parent_Supplier__c</columns>
        <columns>Top_Parent_Hold_Payment__c</columns>
        <columns>Payment_Method_G__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold_Payment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Parent_Hold_Payment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Top_Parent_Hold_Payment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Suppliers on Pymt Hold</label>
    </listViews>
    <nameField>
        <label>Supplier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <recordTypes>
        <fullName>Purchase_From</fullName>
        <active>true</active>
        <description>Supplier that you purchase from</description>
        <label>Purchase From</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remit_To</fullName>
        <active>true</active>
        <description>Supplier that receives payments</description>
        <label>Remit To</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bank_Routing_Required_for_ACH</fullName>
        <active>true</active>
        <description>Bank Routing information is required for ACH payment method</description>
        <errorConditionFormula>AND( ISPICKVAL( Payment_Method_G__c , &apos;ACH&apos;),
len( Bank_Routing_Number__c )=0)</errorConditionFormula>
        <errorDisplayField>Bank_Routing_Number__c</errorDisplayField>
        <errorMessage>Bank Routing Number is required for ACH Transfers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_TIN_Length</fullName>
        <active>false</active>
        <description>Max TIN Length</description>
        <errorConditionFormula>Not(IsBlank(Tax_ID__c)) &amp;&amp; LEN(Tax_ID__c) &gt; 11</errorConditionFormula>
        <errorDisplayField>Tax_ID__c</errorDisplayField>
        <errorMessage>Tax identification number exceeds the valid length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Bank_Account_for_ACH</fullName>
        <active>true</active>
        <description>For ACH transfers, we need to make sure we have Bank Account info</description>
        <errorConditionFormula>AND(ISPICKVAL( Payment_Method_G__c , &apos;ACH&apos;), LEN(Bank_Account_Number__c)=0)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Bank Account Number Required for ACH transfers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x1099_Box_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>if(X1099_Supplier__c &amp;&amp;  ISPICKVAL(X1099_Box_G__c ,&quot;&quot;)
,true, false)</errorConditionFormula>
        <errorDisplayField>X1099_Box_G__c</errorDisplayField>
        <errorMessage>You must select a 1099 Box value for a 1099 reportable supplier.</errorMessage>
    </validationRules>
</CustomObject>